--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_ROLLBAR_CLIENT_TOKEN=9fc7de926cd14a3ea13357ce43a9e504
+NEXT_PUBLIC_ROLLBAR_CLIENT_TOKEN="43447fbbf80f4b6f9f7ce093436b9d05"
+
+# Rollbar server token
+ROLLBAR_SERVER_TOKEN=""
