--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_ROLLBAR_CLIENT_TOKEN="43447fbbf80f4b6f9f7ce093436b9d05"
 
 # Rollbar server token
-ROLLBAR_SERVER_TOKEN=""
+ROLLBAR_SERVER_TOKEN="03f5461d4566424d860a06f279a690b6"
