--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_ENVIRONMENT="development"
 NEXT_PUBLIC_ROLLBAR_CLIENT_TOKEN="43447fbbf80f4b6f9f7ce093436b9d05"
 
 # Rollbar server token
